Task 1.5 – nav – added header row wrap if too many nav items for 1 row; added scroll in mobile view if too many nav items for 1 page; fixed background-color for nav in mobile view

--- a/Task_1.5_Create_Bike_shop_website/styles/style.css
+++ b/Task_1.5_Create_Bike_shop_website/styles/style.css
@@ -11,6 +11,8 @@ body {
   font-family: cursive;
   font-size: 20px;
   line-height: 2rem;
+  overflow-x: hidden; 
+  position: relative; 
 }
 
 /*---------------------------------
@@ -34,6 +36,7 @@ body {
 .header__logo {
   height: 100px;
   margin-left: 40px;
+  flex: 1 1 20%; /* for IE11 */
 }
 
 .header__logo a {
@@ -53,10 +56,13 @@ body {
 
 .header__nav-wrapper {
   margin-left: auto;
+  flex: 1 1 80%; /* for IE11 */
 }
 
 .header__nav ul {
   display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-end;
 }
 
 .header__nav li a {
@@ -511,19 +517,21 @@ body {
     right: 0;
     top: 100%;
     height: 0;
+    max-height: 0; /* IE11 fix for transition */
     width: 100%;
-    backdrop-filter: opacity(10%) blur(1px);
-    background-color: rgba(0, 0, 0, .6);
+    background-color: rgba(0, 0, 0, .98);
     overflow: hidden;
     transition: all .5s;
     visibility: hidden;
   }
 
   .header__nav-wrapper input:checked ~ .header__nav {
-    height: calc(100vh - 100%);
+    height: 100vh; /* IE11 fix for transition, because "height: calc(100vh - 100%);" does not work */
+    max-height: calc(100vh - 100%); /* IE11 fix for transition */
     padding-top: 20px;
     transition: all .5s;
     visibility: visible;
+    overflow-y: auto;
   }
 
   .header__nav ul {
